[package]
name = "registry-app"
version = "0.1.0"
edition = "2021"

[dependencies]
registry-core = { path = "../core" }
registry-rest-api = { path = "../rest-api" }
tokio = { version = "1.28.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { workspace = true }
axum = { workspace = true }
hyper = { workspace = true }
config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
once_cell = { workspace = true }
uuid = { workspace = true }
