[package]
name = "registry-app"
version.workspace = true
edition.workspace = true

[dependencies]
registry-core = { workspace = true }
registry-rest-api = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
hyper = { workspace = true }
config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
once_cell = { workspace = true }
uuid = { workspace = true }
