[package]
name = "registry-core"
version = "0.1.0"
edition = "2021"

[dependencies]
strategy-api = { path = "../../libs/strategy-api" }
plugin-loader = { path = "../../libs/plugin-loader" }
domain-model = { path = "../../libs/domain-model" }
synapse = { path = "../../libs/synapse" }
tokio = { workspace = true }
tracing = { workspace = true }
once_cell = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
