[package]
name = "registry-core"
version.workspace = true
edition.workspace = true

[dependencies]
strategy-api = { workspace = true }
plugin-loader = { workspace = true }
domain-model = { workspace = true }
synapse = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
once_cell = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
