[package]
name = "registry-core"
version.workspace = true
edition.workspace = true

[dependencies]
registry-config = { workspace = true }
registry-core-api = { workspace = true }
registry-blob-api = { workspace = true }
plugin-api = { workspace = true }
plugin-loader = { workspace = true }
domain-model = { workspace = true }
engine-core-api = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
once_cell = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
