[package]
name = "registry-rest-client"
version = "0.1.0"
edition = "2021"

[dependencies]
registry-rest-api = { path = "../rest-api" }
domain-model = { path = "../../domain-model" }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.71"
serde = { verion = "1.0.162", features = ["derive", "serde_derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7.1"
tracing = "0.1.37"
uuid = { version = "1.3.2", features = ["v4", "serde"] }
