[package]
name = "registry-rest-client"
version.workspace = true
edition.workspace = true

[dependencies]
registry-rest-api = { workspace = true }
domain-model = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
