[package]
name = "simulator-app"
version.workspace = true
edition.workspace = true

[dependencies]
simulator-rest-api = { workspace = true }
domain-model = { workspace = true }
synapse = { workspace = true }
engine-rest-client = { workspace = true }
storage-rest-client = { workspace = true }
simulator-core = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
config = { workspace = true }
axum = { workspace = true }
once_cell = { workspace = true }
