[package]
name = "simulator-app"
version.workspace = true
edition.workspace = true

[dependencies]
simulator-config = { workspace = true }
simulator-rest-api-server = { workspace = true }
domain-model = { workspace = true }
engine-rest-api = { workspace = true }
engine-rest-client = { workspace = true }
storage-rest-client = { workspace = true }
interactor-rest-client = { workspace = true }
simulator-core = { workspace = true }
simulator-postgres-persistence = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
config = { workspace = true }
axum = { workspace = true }
once_cell = { workspace = true }
