[package]
name = "simulator-core"
version.workspace = true
edition.workspace = true

[dependencies]
domain-model = { workspace = true }
synapse = { workspace = true }
engine-rest-client = { workspace = true }
storage-rest-client = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
config = { workspace = true }
axum = { workspace = true }
hyper = { workspace = true }
once_cell = { workspace = true }
