[package]
name = "simulator-core"
version.workspace = true
edition.workspace = true

[dependencies]
simulator-config = { workspace = true }
simulator-core-api = { workspace = true }
engine-core-api = { workspace = true }
storage-core-api = { workspace = true }
interactor-core-api = { workspace = true }
domain-model = { workspace = true }
engine-rest-api = { workspace = true }
engine-rest-client = { workspace = true }
storage-rest-client = { workspace = true }
interactor-rest-client = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
anyhow = { workspace = true }
